--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "require-dir": "^0.3.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "gulp-cli": "^1.4.0"
   }
 }
