--- a/package.json
+++ b/package.json
@@ -17,7 +17,5 @@
     "sass-loader": "^6.0.6",
     "webpack": "^3.6.0"
   },
-  "dependencies": {
-    "gulp-cli": "^1.4.0"
-  }
+  "dependencies": {}
 }
