PNG-4. Added gulp-twig with gulp-data. Pages can now be processed with data

--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "browser-sync": "^2.18.13",
     "eslint": "^4.8.0",
     "gulp": "^3.9.1",
+    "gulp-data": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-twig": "^1.1.1",
+    "gulp-util": "^3.0.8",
+    "js-yaml": "^3.10.0",
     "node-sass": "^4.5.3",
     "require-dir": "^0.3.2",
     "sass-loader": "^6.0.6",
