--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "sass-loader": "^6.0.6",
     "webpack": "^3.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.4"
+  }
 }
