--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^4.8.0",
     "gulp": "^3.9.1",
     "gulp-data": "^1.2.1",
+    "gulp-real-favicon": "^0.2.2",
     "gulp-rename": "^1.2.2",
     "gulp-twig": "^1.1.1",
     "gulp-util": "^3.0.8",
