--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.13",
     "eslint": "^4.8.0",
+    "eslint-formatter-pretty": "^1.3.0",
+    "eslint-loader": "^1.9.0",
     "gulp": "^3.9.1",
     "gulp-data": "^1.2.1",
     "gulp-rename": "^1.2.2",
@@ -20,7 +24,11 @@
     "node-sass": "^4.5.3",
     "require-dir": "^0.3.2",
     "sass-loader": "^6.0.6",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1",
+    "webpack-merge": "^4.1.0",
+    "webpack-stream": "^4.0.0"
   },
   "dependencies": {
     "lodash": "^4.17.4"
