--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "babel-loader": "^7.1.2",
     "browser-sync": "^2.18.13",
     "eslint": "^4.8.0",
+    "fs-extra": "^4.0.2",
     "gulp": "^3.9.1",
     "gulp-data": "^1.2.1",
+    "gulp-prompt": "^0.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-twig": "^1.1.1",
     "gulp-util": "^3.0.8",
