--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-data": "^1.2.1",
     "gulp-prompt": "^0.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-tap": "^1.0.1",
     "gulp-twig": "^1.1.1",
     "gulp-util": "^3.0.8",
     "js-yaml": "^3.10.0",
