--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   "devDependencies": {
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.13",
     "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-formatter-pretty": "^1.3.0",
     "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
     "gulp": "^3.9.1",
     "gulp-data": "^1.2.1",
     "gulp-real-favicon": "^0.2.2",
