--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^4.8.0",
     "fs-extra": "^4.0.2",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-data": "^1.2.1",
     "gulp-prompt": "^0.2.0",
     "gulp-real-favicon": "^0.2.2",
