--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "fs-extra": "^4.0.2",
     "gulp": "^3.9.1",
     "gulp-data": "^1.2.1",
-    "gulp-real-favicon": "^0.2.2",
+    "gulp-htmlhint": "^0.3.1",
     "gulp-prompt": "^0.2.0",
+    "gulp-real-favicon": "^0.2.2",
     "gulp-rename": "^1.2.2",
     "gulp-tap": "^1.0.1",
     "gulp-twig": "^1.1.1",
