--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "css-loader": "^0.28.7",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-formatter-pretty": "^1.3.0",
@@ -20,6 +21,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-data": "^1.2.1",
     "gulp-rename": "^1.2.2",
@@ -27,8 +30,12 @@
     "gulp-util": "^3.0.8",
     "js-yaml": "^3.10.0",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "require-dir": "^0.3.2",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "stylelint": "^8.2.0",
+    "stylelint-webpack-plugin": "^0.9.0",
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
