--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.13",
     "css-loader": "^0.28.7",
