--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.13",
     "css-loader": "^0.28.7",
+    "del": "^3.0.0",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-formatter-pretty": "^1.3.0",
