--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
     "eslint": "^4.8.0",
@@ -37,6 +38,7 @@
     "gulp-util": "^3.0.8",
     "js-yaml": "^3.10.0",
     "node-sass": "^4.5.3",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.6",
     "require-dir": "^0.3.2",
     "sass-loader": "^6.0.6",
