--- a/src/pages/Home/home.yml
+++ b/src/pages/Home/home.yml
@@ -1,5 +1,7 @@
 config:
   layout: base
   title: Home
+  description: Das ist die Seitenbeschreibung <br/> mit Bruch
+  status: approved
 exampleText: Das ist ein Beispieltext
 buttonLabel: Das ist ein Buttonlabel
