--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.6",
     "require-dir": "^0.3.2",
+    "run-sequence": "^2.2.0",
     "sass-loader": "^6.0.6",
     "scss-parser": "^1.0.0",
     "style-loader": "^0.19.0",
