--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.6",
+    "replace-ext": "^1.0.0",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
     "sass-loader": "^6.0.6",
     "scss-parser": "^1.0.0",
+    "showdown": "^1.8.0",
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
     "stylelint-webpack-plugin": "^0.9.0",
@@ -54,7 +56,8 @@
     "webpack-stream": "^4.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "prismjs": "^1.8.3"
   },
   "scripts": {
     "dev": "NODE_ENV=development gulp",
