--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
+    "escape-html": "^1.0.3",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-formatter-pretty": "^1.3.0",
