--- a/src/pages/Home/home.yml
+++ b/src/pages/Home/home.yml
@@ -5,3 +5,4 @@ config:
   status: approved
 exampleText: Das ist ein Beispieltext
 buttonLabel: Das ist ein Buttonlabel
+bridge: defaultData[bridge]
