Added CustomEvent method to dispatch custom events

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "window": true,
     "Vue": true,
     "_": true,
-    "localStorage": true
+    "localStorage": true,
+    "CustomEvent": true
   }
 }
