Basic integration of a demo accordion, yet without animations or css styles

--- a/src/pages/Home/home.yml
+++ b/src/pages/Home/home.yml
@@ -5,4 +5,4 @@ config:
   status: approved
 exampleText: Das ist ein Beispieltext
 buttonLabel: Das ist ein Buttonlabel
-header: defaultData[header]
+accordion: defaultData[accordion]
