Added new form integrating defaultData of a component by extends.

--- a/src/pages/Home/home.yml
+++ b/src/pages/Home/home.yml
@@ -5,4 +5,7 @@ config:
   status: approved
 exampleText: Das ist ein Beispieltext
 buttonLabel: Das ist ein Buttonlabel
-accordion: defaultData[accordion]
+accordion:
+  _options:
+    multipleOpen: false
+  extends: accordion
