--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "fs-extra": "^4.0.2",
     "gulp": "^3.9.1",
