--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "bows": "^1.7.0",
     "element-client-rect": "^1.0.4",
     "lodash": "^4.17.4",
+    "normalize.css": "^7.0.0",
     "prismjs": "^1.8.3"
   },
   "scripts": {
