--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
