Changed gulp twig process

--- a/src/pages/Home/home.yml
+++ b/src/pages/Home/home.yml
@@ -5,7 +5,8 @@ config:
   status: approved
 exampleText: Das ist ein Beispieltext
 buttonLabel: Das ist ein Buttonlabel
-accordion:
-  _options:
-    multipleOpen: false
-  extends: accordion
+components:
+  accordion:
+    _options:
+      multipleOpen: false
+    extends: accordion
