--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-tap": "^1.0.1",
     "gulp-twig": "^1.1.1",
     "gulp-util": "^3.0.8",
+    "imagemin-webpack-plugin": "^1.5.2",
     "js-yaml": "^3.10.0",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
