--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
     }],
     "no-new": 0,
     "class-methods-use-this": 0,
-    "no-trailing-spaces": ["error", { "skipBlankLines": true }]
+    "no-trailing-spaces": ["error", { "skipBlankLines": true }],
+    "no-param-reassign": ["error", { "props": false}]
   },
   "parser": "babel-eslint",
   "globals": {
