--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.13",
@@ -41,6 +42,7 @@
     "imagemin-webpack-plugin": "^1.5.2",
     "js-yaml": "^3.10.0",
     "node-sass": "^4.5.3",
+    "nodelist-foreach-polyfill": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.6",
     "replace-ext": "^1.0.0",
